--- a/Week2Ex5FibonacciHuge/Week2Ex5FibonacciHuge.vcxproj.filters
+++ b/Week2Ex5FibonacciHuge/Week2Ex5FibonacciHuge.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="gcd.cpp">
+    <ClCompile Include="fibonacci_huge.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
