--- a/Week2Ex4LCM/Week2Ex4LCM.vcxproj.filters
+++ b/Week2Ex4LCM/Week2Ex4LCM.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="gcd.cpp">
+    <ClCompile Include="lcm.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
