--- a/Week2Ex6FibLastSum/Week2Ex6FibLastSum.vcxproj.filters
+++ b/Week2Ex6FibLastSum/Week2Ex6FibLastSum.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="gcd.cpp">
+    <ClCompile Include="fibonacci_sum_last_digit.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
