--- a/Week3Ex3CarFuel/Week3Ex3CarFuel.vcxproj.filters
+++ b/Week3Ex3CarFuel/Week3Ex3CarFuel.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="gcd.cpp">
+    <ClCompile Include="car_fueling.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
