--- a/Week3Ex4MaxAdRevenue/Week3Ex4MaxAdRevenue.vcxproj.filters
+++ b/Week3Ex4MaxAdRevenue/Week3Ex4MaxAdRevenue.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="gcd.cpp">
+    <ClCompile Include="dot_product.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
