--- a/Week3Ex7MaxSalary/Week3Ex7MaxSalary.vcxproj.filters
+++ b/Week3Ex7MaxSalary/Week3Ex7MaxSalary.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="gcd.cpp">
+    <ClCompile Include="largest_number.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
