--- a/Week4Ex4Inversions/Week4Ex4Inversions.vcxproj.filters
+++ b/Week4Ex4Inversions/Week4Ex4Inversions.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="gcd.cpp">
+    <ClCompile Include="inversions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
