--- a/Week4Ex5Lottery/Week4Ex5Lottery.vcxproj.filters
+++ b/Week4Ex5Lottery/Week4Ex5Lottery.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="gcd.cpp">
+    <ClCompile Include="points_and_segments.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
