--- a/Week5Ex5LCS/Week5Ex5LCS.vcxproj.filters
+++ b/Week5Ex5LCS/Week5Ex5LCS.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="gcd.cpp">
+    <ClCompile Include="lcs2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
