--- a/Week5Ex5LCS3/Week5Ex5LCS3.vcxproj.filters
+++ b/Week5Ex5LCS3/Week5Ex5LCS3.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="gcd.cpp">
+    <ClCompile Include="lcs3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
