--- a/Week6Ex2/Week6Ex2.vcxproj.filters
+++ b/Week6Ex2/Week6Ex2.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="gcd.cpp">
+    <ClCompile Include="partition3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
