--- a/Week6Ex3/Week6Ex3.vcxproj.filters
+++ b/Week6Ex3/Week6Ex3.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="gcd.cpp">
+    <ClCompile Include="placing_parentheses.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
